--- a/home-style.css
+++ b/home-style.css
@@ -1,16 +1,16 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  background-color: gray;
-  background-image: radial-gradient(white, 1px, transparent 1px);
-  background-size: 3px 3px;
-  margin: 0;
-  padding: 0;
-  font-family: "Jersey 10", monospace;
+    background-color: gray;
+    background-image: radial-gradient(white, 1px, transparent 1px);
+    background-size: 3px 3px;
+    margin: 0;
+    padding: 0;
+    font-family: "Jersey 10", monospace;
     height: 100vh;
 }
 
@@ -39,21 +39,76 @@ body {
 
 .bottom-nav {
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     left: 0;
-    background-color: white;
-    border-top: 2px solid black; /* use border-top instead of border-bottom */
     width: 100%;
-    padding: 0px;
-    margin: 0px;
+    height: 50px;
+    background-color: white;
+    border-top: 2px solid black;
     display: flex;
     align-items: center;
-    height: 60px;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
-.bottom-nav img {
-    height: 40px;
+.nav-item {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    border-right: 2px solid black;
 }
+
+.nav-item:last-child {
+    border-right: none;
+}
+
+.nav-item img {
+    max-height: 30px;
+    object-fit: contain;
+}
+
+
+.clock {
+    margin-left: auto;
+    padding: 0 15px;
+    font-size: 18px;
+    white-space: nowrap;
+    color: black;
+}
+
+.nav-item:first-child {
+    background-color: black;
+}
+
+/* Full black button */
+.start-button {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Link inside the button */
+.start-button a {
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Optional: remove margin from the <p> */
+.start-button p {
+    margin: 0;
+    font-weight: bold;
+}
+
 
 
 .pear-icon {
@@ -81,20 +136,20 @@ body {
 }
 
 .potluck-icon {
-    position: absolute; 
+    position: absolute;
     top: 10%;
     left: 10%;
 }
 
 
 .gridchat-icon {
-    position: absolute; 
+    position: absolute;
     top: 20%;
     left: 40%;
 }
 
 .deepquestion-icon {
-    position: absolute; 
+    position: absolute;
     top: 70%;
     left: 30%;
 }
@@ -113,7 +168,7 @@ body {
 }
 
 .weatherballoon-icon {
-    position: absolute; 
+    position: absolute;
     top: 50%;
     left: 70%;
 }
@@ -123,7 +178,56 @@ body {
 }
 
 .quickbuck-icon {
-    position: absolute; 
+    position: absolute;
     top: 10%;
     left: 80%;
+}
+
+.trash-icon {
+    position: absolute;
+    bottom: 60px;
+    right: 10px;
+}
+
+
+/* Modal overlay */
+#resumeModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 7%;
+    top: 1%;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#resumeModal .modal-content {
+    position: relative;
+    width: 80%;
+    height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+}
+
+#resumeModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+}
+
+#resumeModal iframe {
+    flex-grow: 1;
+    border: none;
+    width: 100%;
+    height: 100%;
 }
