--- a/home-style.css
+++ b/home-style.css
@@ -116,11 +116,13 @@ body {
 }
 
 .icon {
-    width: fit-content;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
     background-color: white;
     min-width: 80px;
+    width: fit-content;
 }
 
 .icon img {
@@ -128,10 +130,12 @@ body {
     background-color: white;
 }
 
-.icon p {
+.icon a {
     font-size: 20px;
     background-color: white;
-    margin-top: -5px;
+    margin-top: 5px;
+    text-decoration: none;
+    color: black;
 }
 
 .potluck-icon {
@@ -194,13 +198,14 @@ body {
     display: none;
     position: fixed;
     z-index: 9999;
-    left: 7%;
-    top: 1%;
+    left: 0;
+    top: 0;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
 }
+
 
 #resumeModal .modal-content {
     position: relative;
@@ -229,4 +234,176 @@ body {
     border: none;
     width: 100%;
     height: 100%;
+}
+
+/* Potluck modal overlay */
+#potluckModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#potluckModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+.modal-content h1 {
+    font-size: 54px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.potluck-img-text img {
+    float: left;
+    /* or right */
+    max-width: 200px;
+    height: auto;
+    margin: 0 20px 20px 0;
+    /* top right bottom left */
+}
+
+.potluck-img-text {
+    overflow: hidden;
+    /* to contain floated elements */
+    line-height: 1.6;
+    font-size: 20px;
+}
+
+
+/* Strong and underline within paragraphs */
+#potluckModal p strong {
+    font-weight: bold;
+}
+
+#potluckModal p u {
+    text-decoration: underline;
+}
+
+
+#potluckModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+.indented {
+    text-indent: 2em;
+    /* or use px, e.g., 20px */
+}
+
+.modal-link {
+    background-color: black;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.modal-link a {
+    text-decoration: none;
+    color: white;
+}
+
+/* Potluck modal overlay */
+#gridchatModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#gridchatModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#gridchatModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+
+/* Potluck modal overlay */
+#quickbuckModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#quickbuckModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#quickbuckModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
 }
