--- a/home-style.css
+++ b/home-style.css
@@ -31,6 +31,8 @@ body {
     /* font-weight: bold; */
     padding-left: 16px;
     padding-right: 16px;
+    text-decoration: none;
+    color: black;
 }
 
 .top-nav a:hover {
@@ -151,6 +153,12 @@ body {
     left: 40%;
 }
 
+.eye2eye-icon {
+    position: absolute;
+    top: 44%;
+    left: 6%;
+}
+
 .deepquestion-icon {
     position: absolute;
     top: 70%;
@@ -253,7 +261,7 @@ body {
     position: relative;
     width: 40%;
     min-height: fit-content;
-    max-height: 80%;
+    max-height: 80vh;
     max-width: 900px;
     background: white;
     display: flex;
@@ -396,6 +404,129 @@ body {
 }
 
 #quickbuckModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+
+/* Potluck modal overlay */
+#deepquestionModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#deepquestionModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#deepquestionModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+
+/* Potluck modal overlay */
+#weatherModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#weatherModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#weatherModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+
+/* Potluck modal overlay */
+#eyeModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#eyeModal .modal-content {
+    position: relative;
+    width: 40%;
+    min-height: fit-content;
+    max-height: 80%;
+    max-width: 900px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#eyeModal .close-btn {
     align-self: flex-end;
     padding: 10px 20px;
     font-size: 18px;
