testing mobile view

--- a/home-style.css
+++ b/home-style.css
@@ -20,7 +20,7 @@ body {
     width: 100vw;
     padding: 0px;
     margin: 0px;
-
+    position: fixed;
     display: flex;
     align-items: center;
     height: 40px;
