--- a/home-style.css
+++ b/home-style.css
@@ -261,15 +261,18 @@ body {
 
 #potluckModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh; 
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
-    overflow-y: auto;
+    overflow-y: auto; 
     padding: 20px;
+    box-sizing: border-box; 
 }
 
 .modal-content h1 {
@@ -344,15 +347,18 @@ body {
 
 #gridchatModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh; 
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     overflow-y: auto;
     padding: 20px;
+    box-sizing: border-box; 
 }
 
 #gridchatModal .close-btn {
@@ -383,15 +389,18 @@ body {
 
 #quickbuckModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh;
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
-    overflow-y: auto;
+    overflow-y: auto; 
     padding: 20px;
+    box-sizing: border-box; 
 }
 
 #quickbuckModal .close-btn {
@@ -422,15 +431,18 @@ body {
 
 #deepquestionModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh; 
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
-    overflow-y: auto;
+    overflow-y: auto; 
     padding: 20px;
+    box-sizing: border-box;
 }
 
 #deepquestionModal .close-btn {
@@ -461,15 +473,18 @@ body {
 
 #weatherModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh; 
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
-    overflow-y: auto;
+    overflow-y: auto; 
     padding: 20px;
+    box-sizing: border-box; 
 }
 
 #weatherModal .close-btn {
@@ -500,15 +515,18 @@ body {
 
 #eyeModal .modal-content {
     position: relative;
-    min-height: fit-content;
-    max-height: 80%;
+    width: 90%;
+    height: auto;
     max-width: 600px;
+    max-height: 80vh;
+    min-height: 200px; 
     background: white;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     overflow-y: auto;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 #eyeModal .close-btn {
