--- a/home-style.css
+++ b/home-style.css
@@ -204,6 +204,20 @@ body {
     z-index: -1;
 }
 
+.behaviorchart-icon {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    z-index: -1;
+}
+
+.behaviorchart-icon {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    z-index: -1;
+}
+
 .trash-icon {
     position: absolute;
     bottom: 60px;
@@ -311,6 +325,54 @@ body {
 
 
 #potluckModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+.behaviorchart-icon {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    z-index: -1;
+}
+
+#behaviorchartModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#behaviorchartModal .modal-content {
+    position: relative;
+    width: 90%;
+    height: auto;
+    max-width: 600px;
+    max-height: 80vh;
+    min-height: 200px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#behaviorchartModal .close-btn {
     align-self: flex-end;
     padding: 10px 20px;
     font-size: 18px;
@@ -648,7 +710,8 @@ h2 {
     #eyeModal .modal-content,
     #quickbuckModal .modal-content,
     #gridchatModal .modal-content,
-    #potluckModal .modal-content {
+    #potluckModal .modal-content,
+    #behaviorchartModal .modal-content {
         position: relative;
         width: 100%;
         min-height: calc(100% - 90px);
@@ -663,4 +726,3 @@ h2 {
         margin-top: -10px
     }
 }
-
