--- a/home-style.css
+++ b/home-style.css
@@ -385,6 +385,54 @@ body {
     margin-top: -20px;
 }
 
+.trash-icon {
+    position: absolute;
+    bottom: 60px;
+    right: 10px;
+    z-index: -1;
+}
+
+#trashModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#trashModal .modal-content {
+    position: relative;
+    width: 90%;
+    height: auto;
+    max-width: 600px;
+    max-height: 80vh;
+    min-height: 400px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#trashModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
 .indented {
     text-indent: 2em;
 }
@@ -711,7 +759,8 @@ h2 {
     #quickbuckModal .modal-content,
     #gridchatModal .modal-content,
     #potluckModal .modal-content,
-    #behaviorchartModal .modal-content {
+    #behaviorchartModal .modal-content,
+    #trashModal .modal-content {
         position: relative;
         width: 100%;
         min-height: calc(100% - 90px);
