--- a/home-style.css
+++ b/home-style.css
@@ -152,6 +152,13 @@ body {
     z-index: -1;
 }
 
+.beeper-icon {
+    position: absolute;
+    top: 73%;
+    left: 10%;
+    z-index: -1;
+}
+
 .eye2eye-icon {
     position: absolute;
     top: 44%;
@@ -169,7 +176,7 @@ body {
 .deepquestion-icon {
     position: absolute;
     top: 70%;
-    left: 30%;
+    left: 68%;
     z-index: -1;
 }
 
@@ -189,7 +196,7 @@ body {
 .weatherballoon-icon {
     position: absolute;
     top: 50%;
-    left: 70%;
+    left: 82%;
     z-index: -1;
 }
 
@@ -296,6 +303,34 @@ body {
     box-sizing: border-box; 
 }
 
+#beeperModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#beeperModal .modal-content {
+    position: relative;
+    width: 90%;
+    height: auto;
+    max-width: 600px;
+    max-height: 80vh; 
+    min-height: 200px; 
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto; 
+    padding: 20px;
+    box-sizing: border-box; 
+}
+
 .modal-content h1 {
     font-size: 54px;
     margin-bottom: 20px;
@@ -321,6 +356,19 @@ body {
 
 #potluckModal p u {
     text-decoration: underline;
+}
+
+#beeperModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
 }
 
 
