--- a/home-style.css
+++ b/home-style.css
@@ -225,6 +225,13 @@ body {
     z-index: -1;
 }
 
+.nothing-icon {
+    position: absolute;
+    top: 57%;
+    left: 30%;
+    z-index: -1;
+}
+
 .trash-icon {
     position: absolute;
     bottom: 60px;
@@ -331,6 +338,34 @@ body {
     box-sizing: border-box; 
 }
 
+#nothingModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#nothingModal .modal-content {
+    position: relative;
+    width: 90%;
+    height: auto;
+    max-width: 600px;
+    max-height: 80vh;
+    min-height: 200px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .modal-content h1 {
     font-size: 54px;
     margin-bottom: 20px;
@@ -359,6 +394,19 @@ body {
 }
 
 #beeperModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
+}
+
+#nothingModal .close-btn {
     align-self: flex-end;
     padding: 10px 20px;
     font-size: 18px;
@@ -808,6 +856,7 @@ h2 {
     #gridchatModal .modal-content,
     #potluckModal .modal-content,
     #behaviorchartModal .modal-content,
+    #nothingModal .modal-content,
     #trashModal .modal-content {
         position: relative;
         width: 100%;
