--- a/home-style.css
+++ b/home-style.css
@@ -232,6 +232,14 @@ body {
     z-index: -1;
 }
 
+.secrets-app-icon {
+    position: absolute;
+    top: 40%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
 .trash-icon {
     position: absolute;
     bottom: 60px;
@@ -364,6 +372,47 @@ body {
     overflow-y: auto;
     padding: 20px;
     box-sizing: border-box;
+}
+
+#secretsAppModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#secretsAppModal .modal-content {
+    position: relative;
+    width: 90%;
+    height: auto;
+    max-width: 600px;
+    max-height: 80vh;
+    min-height: 200px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    overflow-y: auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#secretsAppModal .close-btn {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: black;
+    color: white;
+    margin-right: -20px;
+    margin-top: -20px;
 }
 
 .modal-content h1 {
@@ -857,6 +906,7 @@ h2 {
     #potluckModal .modal-content,
     #behaviorchartModal .modal-content,
     #nothingModal .modal-content,
+    #secretsAppModal .modal-content,
     #trashModal .modal-content {
         position: relative;
         width: 100%;
